// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector renders Selector correctly 1`] = `
<WithMooskinContext
  activeItem="/settings"
  className=""
  onClickItem={[MockFunction]}
  style={Object {}}
>
  <Component
    activeItem="/settings"
    className=""
    onClickItem={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "button": "#3fbaca",
          "buttonDisabled": "#e2e2e2",
          "common": "#ffffff",
          "main": "#f7f7f7",
          "secondaryToggle": "#ffffff",
          "switchDisabled": "#e7e7e7",
          "switchHandle": "#ffffff",
          "switchOff": "#9d9d9d",
          "switchOn": "#3fbaca",
          "tag": "#293346",
          "toggle": "#425579",
        },
        "borderColors": Object {
          "common": "#e2e2e2",
        },
        "fontColors": Object {
          "anchor": "#3fbaca",
          "button": "#ffffff",
          "common": "#293346",
          "description": "#9d9d9d",
          "disabledAnchor": "#9d9d9d",
          "label": "#2d2d2d",
          "secondaryToggle": "#9d9d9d",
          "tableHeader": "#425579",
          "tag": "#ffffff",
          "text": "#2d2d2d",
          "toggle": "#ffffff",
        },
      }
    }
    style={Object {}}
  >
    <StyledSelector
      activeItem="/settings"
      className=""
      onClickItem={[MockFunction]}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "buttonDisabled": "#e2e2e2",
            "common": "#ffffff",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "switchDisabled": "#e7e7e7",
            "switchHandle": "#ffffff",
            "switchOff": "#9d9d9d",
            "switchOn": "#3fbaca",
            "tag": "#293346",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "tableHeader": "#425579",
            "tag": "#ffffff",
            "text": "#2d2d2d",
            "toggle": "#ffffff",
          },
        }
      }
      style={Object {}}
    >
      <Box
        activeItem="/settings"
        className="sc-gtssRu gkYWfH"
        onClickItem={[MockFunction]}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "buttonDisabled": "#e2e2e2",
              "common": "#ffffff",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "switchDisabled": "#e7e7e7",
              "switchHandle": "#ffffff",
              "switchOff": "#9d9d9d",
              "switchOn": "#3fbaca",
              "tag": "#293346",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "tableHeader": "#425579",
              "tag": "#ffffff",
              "text": "#2d2d2d",
              "toggle": "#ffffff",
            },
          }
        }
        style={Object {}}
      >
        <Component
          activeItem="/settings"
          className="sc-gtssRu gkYWfH"
          onClickItem={[MockFunction]}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "buttonDisabled": "#e2e2e2",
                "common": "#ffffff",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "switchDisabled": "#e7e7e7",
                "switchHandle": "#ffffff",
                "switchOff": "#9d9d9d",
                "switchOn": "#3fbaca",
                "tag": "#293346",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "tableHeader": "#425579",
                "tag": "#ffffff",
                "text": "#2d2d2d",
                "toggle": "#ffffff",
              },
            }
          }
          style={Object {}}
        >
          <StyledBox
            activeItem="/settings"
            className="sc-gtssRu gkYWfH"
            onClickItem={[MockFunction]}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "buttonDisabled": "#e2e2e2",
                  "common": "#ffffff",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "switchDisabled": "#e7e7e7",
                  "switchHandle": "#ffffff",
                  "switchOff": "#9d9d9d",
                  "switchOn": "#3fbaca",
                  "tag": "#293346",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "tableHeader": "#425579",
                  "tag": "#ffffff",
                  "text": "#2d2d2d",
                  "toggle": "#ffffff",
                },
              }
            }
            style={Object {}}
          >
            <div
              className="sc-bdnylx hdbdkm sc-gtssRu gkYWfH"
              onClickItem={[MockFunction]}
              style={Object {}}
            >
              <WithMooskinContext
                active={true}
                className=""
                key="0/.0"
                onClick={[Function]}
                style={Object {}}
                value="/settings"
              >
                <Component
                  active={true}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                  value="/settings"
                >
                  <StyledSelectorItem
                    active={true}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                    value="/settings"
                  >
                    <Box
                      active={true}
                      className="sc-dlnjPT kpYFMT"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                      value="/settings"
                    >
                      <Component
                        active={true}
                        className="sc-dlnjPT kpYFMT"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                        value="/settings"
                      >
                        <StyledBox
                          active={true}
                          className="sc-dlnjPT kpYFMT"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                          value="/settings"
                        >
                          <div
                            className="sc-bdnylx hdbdkm sc-dlnjPT kpYFMT"
                            onClick={[Function]}
                            style={Object {}}
                            value="/settings"
                          >
                            Settings
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSelectorItem>
                </Component>
              </WithMooskinContext>
              <WithMooskinContext
                active={false}
                className=""
                key="1/.1"
                onClick={[Function]}
                style={Object {}}
                value="/template"
              >
                <Component
                  active={false}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                  value="/template"
                >
                  <StyledSelectorItem
                    active={false}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                    value="/template"
                  >
                    <Box
                      active={false}
                      className="sc-dlnjPT cenvKy"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                      value="/template"
                    >
                      <Component
                        active={false}
                        className="sc-dlnjPT cenvKy"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                        value="/template"
                      >
                        <StyledBox
                          active={false}
                          className="sc-dlnjPT cenvKy"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                          value="/template"
                        >
                          <div
                            className="sc-bdnylx hdbdkm sc-dlnjPT cenvKy"
                            onClick={[Function]}
                            style={Object {}}
                            value="/template"
                          >
                            Template
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSelectorItem>
                </Component>
              </WithMooskinContext>
              <WithMooskinContext
                active={false}
                className=""
                key="2/.2"
                onClick={[Function]}
                style={Object {}}
                value="/preview"
              >
                <Component
                  active={false}
                  className=""
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                  value="/preview"
                >
                  <StyledSelectorItem
                    active={false}
                    className=""
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                    value="/preview"
                  >
                    <Box
                      active={false}
                      className="sc-dlnjPT cenvKy"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                      value="/preview"
                    >
                      <Component
                        active={false}
                        className="sc-dlnjPT cenvKy"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                        value="/preview"
                      >
                        <StyledBox
                          active={false}
                          className="sc-dlnjPT cenvKy"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                          value="/preview"
                        >
                          <div
                            className="sc-bdnylx hdbdkm sc-dlnjPT cenvKy"
                            onClick={[Function]}
                            style={Object {}}
                            value="/preview"
                          >
                            Preview
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledSelectorItem>
                </Component>
              </WithMooskinContext>
            </div>
          </StyledBox>
        </Component>
      </Box>
    </StyledSelector>
  </Component>
</WithMooskinContext>
`;

exports[`Selector renders SelectorItem correctly 1`] = `
<WithMooskinContext
  active={true}
  className="myClass"
  onClick={[MockFunction]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  <Component
    active={true}
    className="myClass"
    onClick={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "button": "#3fbaca",
          "buttonDisabled": "#e2e2e2",
          "common": "#ffffff",
          "main": "#f7f7f7",
          "secondaryToggle": "#ffffff",
          "switchDisabled": "#e7e7e7",
          "switchHandle": "#ffffff",
          "switchOff": "#9d9d9d",
          "switchOn": "#3fbaca",
          "tag": "#293346",
          "toggle": "#425579",
        },
        "borderColors": Object {
          "common": "#e2e2e2",
        },
        "fontColors": Object {
          "anchor": "#3fbaca",
          "button": "#ffffff",
          "common": "#293346",
          "description": "#9d9d9d",
          "disabledAnchor": "#9d9d9d",
          "label": "#2d2d2d",
          "secondaryToggle": "#9d9d9d",
          "tableHeader": "#425579",
          "tag": "#ffffff",
          "text": "#2d2d2d",
          "toggle": "#ffffff",
        },
      }
    }
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <StyledSelectorItem
      active={true}
      className="myClass"
      onClick={[MockFunction]}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "buttonDisabled": "#e2e2e2",
            "common": "#ffffff",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "switchDisabled": "#e7e7e7",
            "switchHandle": "#ffffff",
            "switchOff": "#9d9d9d",
            "switchOn": "#3fbaca",
            "tag": "#293346",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "tableHeader": "#425579",
            "tag": "#ffffff",
            "text": "#2d2d2d",
            "toggle": "#ffffff",
          },
        }
      }
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <Box
        active={true}
        className="sc-dlnjPT kpYFMT myClass"
        onClick={[MockFunction]}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "buttonDisabled": "#e2e2e2",
              "common": "#ffffff",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "switchDisabled": "#e7e7e7",
              "switchHandle": "#ffffff",
              "switchOff": "#9d9d9d",
              "switchOn": "#3fbaca",
              "tag": "#293346",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "tableHeader": "#425579",
              "tag": "#ffffff",
              "text": "#2d2d2d",
              "toggle": "#ffffff",
            },
          }
        }
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <Component
          active={true}
          className="sc-dlnjPT kpYFMT myClass"
          onClick={[MockFunction]}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "buttonDisabled": "#e2e2e2",
                "common": "#ffffff",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "switchDisabled": "#e7e7e7",
                "switchHandle": "#ffffff",
                "switchOff": "#9d9d9d",
                "switchOn": "#3fbaca",
                "tag": "#293346",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "tableHeader": "#425579",
                "tag": "#ffffff",
                "text": "#2d2d2d",
                "toggle": "#ffffff",
              },
            }
          }
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <StyledBox
            active={true}
            className="sc-dlnjPT kpYFMT myClass"
            onClick={[MockFunction]}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "buttonDisabled": "#e2e2e2",
                  "common": "#ffffff",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "switchDisabled": "#e7e7e7",
                  "switchHandle": "#ffffff",
                  "switchOff": "#9d9d9d",
                  "switchOn": "#3fbaca",
                  "tag": "#293346",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "tableHeader": "#425579",
                  "tag": "#ffffff",
                  "text": "#2d2d2d",
                  "toggle": "#ffffff",
                },
              }
            }
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <div
              className="sc-bdnylx hdbdkm sc-dlnjPT kpYFMT myClass"
              onClick={[MockFunction]}
              style={
                Object {
                  "color": "blue",
                }
              }
            />
          </StyledBox>
        </Component>
      </Box>
    </StyledSelectorItem>
  </Component>
</WithMooskinContext>
`;
